# pyproject.toml
[project]
name = "healthify"
version = "1.0.0"
description = "Healthify AI Health App"
requires-python = ">=3.12"

dependencies = [
    "flet==0.28.3",
    "google-generativeai",
    "pillow",
    "requests",
    "python-dotenv",
    "httpx",
    "aiohttp",
]

[tool.flet]
product = "Healthify"
company = "SKYTECH"

[tool.flet.app]
path = "."

[tool.flet.python]
version = "3.12"

[tool.flet.assets]
path = "assets"
